Refactor XMLSceneParser by moving it to scene folder and simply it by breaking it into functions